[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
wasmtime = { version = "15.0", features = ["component-model"] }
wit-bindgen = { version = "0.16", features = ["realloc"] }
sha2 = "0.10"
